--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,11 @@
 Django==5.2.4
-psycopg2-binary
+psycopg2-binary==2.9.9
 djangorestframework==3.16.0
 djangorestframework-simplejwt==5.5.0
 django-cors-headers==4.7.0
 PyJWT==2.9.0
-sqlparse
-asgiref
-gunicorn
-dj-database-url
-whitenoise
-django-import-export
+gunicorn==21.2.0
+dj-database-url==2.1.0
+whitenoise==6.6.0
+django-import-export==3.3.1
 pytz==2023.3
