--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
 Django==5.2.4
-psycopg2-binary==2.9.9
-djangorestframework==3.16.0
-djangorestframework-simplejwt==5.5.0
-django-cors-headers==4.7.0
-PyJWT==2.9.0
-gunicorn==21.2.0
+djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.0
+django-cors-headers==4.4.0
 dj-database-url==2.1.0
+psycopg2-binary==2.9.9
 whitenoise==6.6.0
-django-import-export==3.3.1
-pytz==2023.3
+gunicorn==22.0.0
+django-import-export==4.0.7
+python-decouple==3.8
