--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.0
 django-cors-headers==4.4.0
 dj-database-url==2.1.0
-psycopg[binary]==3.1.18
+psycopg2-binary==2.9.7
 whitenoise==6.6.0
 gunicorn==22.0.0
 django-import-export==4.0.7
